Fix date + spacing issues

--- a/themes/yk/static/css/main.css
+++ b/themes/yk/static/css/main.css
@@ -1,1 +1,1 @@
-.b-grid-el{padding:3% 4.5%;text-align:left}.b-grid-el p{font-size:.8em;line-height:1.4em}.b-grid{padding:2% 0}.b-main{text-align:center}.b-main-2{width:70%}.b-main-2 h2{font-size:3em;margin-top:3%}.b-main-2 p{line-height:1.4em;margin:.4% 0;padding:.2% 0}.b-writing>p{text-indent:3%}.b-subtitle{font-size:4.3em}.b-sub-2{color:#888;margin-bottom:0}
+.b-grid-el{padding:3% 4.5%;text-align:left}.b-grid-el p{font-size:.9em;line-height:1.4em}.b-grid{padding:2% 0}.b-main{text-align:center}.b-main-2{width:70%}.b-main-2 h2{font-size:3em;margin-top:3%}.b-main-2 p{line-height:1.4em;margin:.4% 0;padding:.2% 0}.b-writing>p{text-indent:3%}.b-subtitle{font-size:4.3em}.b-sub-2{color:#888;margin-bottom:0}
